--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,19 @@ dependencies {
     def RETROFIT_VERSION = "2.5.0"
     def SUPPORT_VERSION = "28.0.0"
     def GLIDE_VERSION = "4.8.0"
+    def MOCKITO_VERSION = "2.8.47"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    testImplementation 'org.mockito:mockito-core:2.8.9'
-    testImplementation 'org.mockito:mockito-inline:2.8.47'
+
+    //mockito
+    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
+    testImplementation "org.mockito:mockito-inline:$MOCKITO_VERSION"
 
     //Network
     implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
